--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,82 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-*{
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap');
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;   
+    font-family: 'Poppins', sans-serif;
 }
 
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background-color: #6563ff;
+}
+
+.wrapper {
+    height: 400px;
+    width: 400px;
+    background: #f8f8f8;
+    border-radius: 10px;
+    padding: 25px;
+}
+
+.cards, .card, .view {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.cards .card .view {
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    border-radius: 7px;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+    position: absolute;
+    backface-visibility: hidden;
+    transition: transform 0.6s ease;
+}
+
+.cards .card {
+    cursor: pointer;
+    height: calc(100% / 4 - 10px);
+    width: calc(100% / 4 - 10px);
+    position: relative;
+    perspective: 800px;
+    transform-style: preserve-3d;
+}
+
+.cards {
+    height: 100%;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.card .front-view span {
+    font-size: 40px;
+    color: #6563ff;
+}
+
+.card .back-view img {
+    max-width: 45px;
+}
+
+.card .front-view {
+    transform: rotateY(0deg); 
+}
+
+.card .back-view {
+    transform: rotateY(180deg); 
+}
+
+.card:hover .front-view {
+    transform: rotateY(-180deg);
+}
+
+.card:hover .back-view {
+    transform: rotateY(0deg);
+}
